src/test/test-models/bad/validate_array_expr_bad3.stan
parameters {
  real y;
}
model {
  int int_1_a[3];
  int_1_a = { };  // cannot be empty
  y ~ normal(0,1);
}
